# count-test

contract/: Cargo.toml  contract.wasm
contract/src/: contract.rs  msg.rs  state.rs
frontend/: package-lock.json  package.json
frontend/src/: App.js
manager-contract/: Cargo.toml
manager-contract/node/: execute.js  index.js
manager-contract/src/: contract.rs  counter.rs  lib.rs  msg.rs  state.rs
node/: count.js  index.js  query.js  query_count.js  query_random.js  random.js
