[package]
name = "submessage_demo"
version = "0.1.0"
authors = ["seanrad"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.10" }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.10" }
secret-toolkit = { version = "0.10.0", default-features = false, features = [
  "utils",
  "storage",

] }
secret-toolkit-storage = "0.10.0"
rand = { version = "0.8.5", default-features = false }
snafu = { version = "0.8.1" }
serde = { version = "1.0.114", default-features = false, features = ["derive"] }
schemars = "0.8.1"
base64 = "0.22.0"
thiserror = { version = "1.0.50" }


[dev-dependencies]
cosmwasm-schema = "2.0.2"
